@@ -4,6 +4,9 @@
 - renamed XLANG to XLANGUAGE (mamba)
 - namespaces (mamba)
 - autoloading (mamba)
+- moved include/config.php to /config/config.ph (mamba)
+- __NAMESPACE__ in Helper.php (mamba)
+- renamed 'PHP_SELF' to 'SCRIPT_NAME' (mamba)
 
 <h5>3.05 RC 1        [2017-09-02]</h5>
 <hr>
